fuentes a las categorias

--- a/public/estilos/styles.css
+++ b/public/estilos/styles.css
@@ -2076,6 +2076,6 @@ input[type=checkbox].w3-check:disabled+.w3-validate, input[type=radio].w3-radio:
 
 .textocategorias {
     font-size: 20px;
-    font-family: 'Anton', sans-serif;
-    color: #954949;
+    font-family: 'Permanent Marker', cursive;
+    color: #000000;
 }
