--- a/views/secciones/multimedia.erb
+++ b/views/secciones/multimedia.erb
@@ -15,6 +15,7 @@
         <div class="w3-container w3-leftbar textocategorias">
             <a href="audios" class="quitar ">
                 Audios
+                <i class="material-icons">library_music</i>
             </a>
         </div>
         <br>
@@ -22,6 +23,7 @@
         <div class="w3-container w3-leftbar textocategorias">
             <a href="videos" class="quitar ">
                 Videos
+                <i class="material-icons">movie</i>
             </a>
         </div>
         <br>
@@ -29,6 +31,7 @@
         <div class="w3-container w3-leftbar textocategorias">
             <a href="letras" class="quitar ">
                 Letras
+                <i class="material-icons">note</i>
             </a>
         </div>
         <br>
