--- a/views/secciones/multimedia.erb
+++ b/views/secciones/multimedia.erb
@@ -12,27 +12,21 @@
     <br>
 
     <body class="">
-        <div class="w3-container w3-leftbar textocategorias">
-            <a href="audios" class="quitar ">
-                Audios
-                <i class="material-icons">library_music</i>
-            </a>
+        <div class="w3-container textocategorias">
+            <a href="audios" class="quitar">
+                <i class="material-icons">library_music</i>Audios</a>
         </div>
         <br>
 
-        <div class="w3-container w3-leftbar textocategorias">
-            <a href="videos" class="quitar ">
-                Videos
-                <i class="material-icons">movie</i>
-            </a>
+        <div class="w3-container textocategorias">
+            <a href="videos" class="quitar">
+                <i class="material-icons">movie</i>Videos</a>
         </div>
         <br>
 
-        <div class="w3-container w3-leftbar textocategorias">
-            <a href="letras" class="quitar ">
-                Letras
-                <i class="material-icons">note</i>
-            </a>
+        <div class="w3-container textocategorias">
+            <a href="letras" class="quitar">
+                <i class="material-icons">note</i>Letras</a>
         </div>
         <br>
     </body>
