iconos a pagina shows

--- a/views/secciones/shows.erb
+++ b/views/secciones/shows.erb
@@ -7,25 +7,18 @@
         <title>Buena Cosecha, Ska Reggae | Shows</title>
     </head>
     <body>
-
         <br>
         <br>
         <br>
-
-        <div class="w3-container w3-leftbar w3-border-deep-orange w3-orange">
-
+        <br>
+        <div class="w3-container textocategorias">
             <a href="pasados" class="quitar">
-                <h3>Pasados</h3>
-
-            </a>
+                <i class="material-icons">arrow_back</i>Pasados</a>
         </div>
         <br>
-        <div class="w3-container w3-leftbar w3-border-cyan w3-light-blue">
-
+        <div class="w3-container textocategorias">
             <a href="proximos" class="quitar">
-                <h3>Próximos</h3>
-
-            </a>
+                <i class="material-icons">arrow_forward</i>Próximos</a>
         </div>
         <br>
     </body>
