--- a/views/secciones/multimedia.erb
+++ b/views/secciones/multimedia.erb
@@ -7,12 +7,11 @@
         <title>Buena Cosecha, Ska Reggae | Música</title>
     </head>
 
-    <br>
-    <br>
-    <br>
-    <br>
-
-    <body class="">
+    <body>
+        <br>
+        <br>
+        <br>
+        <br>
         <div class="w3-container textocategorias">
             <a href="audios" class="quitar">
                 <i class="material-icons">library_music</i>Audios</a>
