--- a/views/secciones/pasados.erb
+++ b/views/secciones/pasados.erb
@@ -16,6 +16,15 @@
                 <li class="w3-padding-16">
                     <span onclick="this.parentElement.style.display='none'" class="w3-closebtn w3-padding w3-margin-right w3-medium">x</span>
                     <a href="pquesaavedra" class="quitar">
+                        <img src="/imagenes/galeria/fechas/salon1-10/banda1.jpg" class="w3-left w3-circle w3-margin-right" style="width:60px">
+                        <span class="w3-xlarge">Salon Pueyrredon | 01 hs | CABA</span><br>
+                        <span class="w3-large">1 de Octubre de 2016</span>
+                    </a>
+                </li>
+
+                <li class="w3-padding-16">
+                    <span onclick="this.parentElement.style.display='none'" class="w3-closebtn w3-padding w3-margin-right w3-medium">x</span>
+                    <a href="pquesaavedra" class="quitar">
                         <img src="/imagenes/galeria/fechas/pquesaavedra1-10/banda6.jpg" class="w3-left w3-circle w3-margin-right" style="width:60px">
                         <span class="w3-xlarge">Parque Saavedra | 15 hs | CABA</span><br>
                         <span class="w3-large">24 de Septiembre de 2016</span>
