modificando estilo texto pagina nosotros

--- a/views/secciones/pasados.erb
+++ b/views/secciones/pasados.erb
@@ -15,7 +15,7 @@
             <ul class="w3-ul w3-card-4 w3-hoverable">
                 <li class="w3-padding-16">
                     <span onclick="this.parentElement.style.display='none'" class="w3-closebtn w3-padding w3-margin-right w3-medium">x</span>
-                    <a href="pquesaavedra" class="quitar">
+                    <a href="salon2" class="quitar">
                         <img src="/imagenes/galeria/fechas/salon1-10/banda1.jpg" class="w3-left w3-circle w3-margin-right" style="width:60px">
                         <span class="w3-xlarge">Salon Pueyrredon | 01 hs | CABA</span><br>
                         <span class="w3-large">1 de Octubre de 2016</span>
