--- a/public/estilos/styles.css
+++ b/public/estilos/styles.css
@@ -2079,3 +2079,9 @@ input[type=checkbox].w3-check:disabled+.w3-validate, input[type=radio].w3-radio:
     font-family: 'Permanent Marker', cursive;
     color: #000000;
 }
+
+.textodescripcion {
+    font-size: 18px;
+    font-family: 'Shrikhand', cursive;
+    color: #000000;
+}
