--- a/views/secciones/nosotros.erb
+++ b/views/secciones/nosotros.erb
@@ -11,11 +11,11 @@
 
         <!-- The Band Section -->
         <div class="w3-container w3-content w3-center w3-padding-64 quitar" style="max-width:800px">
-            <h2 class="w3-wide">LA BANDA</h2>
+            <h2 class="w3-wide textocategorias">LA BANDA</h2>
             <p class="w3-opacity">
                 <i>Estos somos!!</i>
             </p>
-            <p class="w3-justify">La banda está conformada por Beto en guitarra y voz, Uriel en bateria, Hernán en guitarra, Danilo en bajo, Romina en trombon, Daniel en el saxo, Gastón en trompeta, Melina en percusión y Facundo en teclados
+            <p class="w3-justify textodescripcion">La banda está conformada por Beto en guitarra y voz, Uriel en bateria, Hernán en guitarra, Danilo en bajo, Romina en trombon, Daniel en el saxo, Gastón en trompeta, Melina en percusión y Facundo en teclados
             </p>
             <div class="w3-row w3-padding-32">
                 <div class="w3-third">
