--- a/views/secciones/proximos.erb
+++ b/views/secciones/proximos.erb
@@ -6,21 +6,16 @@
         <link href="<%= url('/estilos/styles.css') %>" rel="stylesheet" type="text/css"/>
         <title>Buena Cosecha, Ska Reggae | Próximos recitales</title>
     </head>
-    <br>
-    <br>
-    <br>
 
     <body>
-        <div class="w3-container w3-leftbar w3-border-deep-orange w3-orange">
-            <a href="https://www.facebook.com/buenacosechabanda/" target="_blank" class="quitar"></a>
-            <h3>
-                Sabado 1 de Octubre en el Salon Pueyrredon (Av. Santa Fe 4560 CABA), 23 hs, $80 en puerta</h3>
-        </div>
-        <br>
-        <div class="w3-container w3-leftbar w3-border-cyan w3-light-blue">
-            <a href="https://www.facebook.com/buenacosechabanda/" target="_blank" class="quitar"></a>
-            <h3>
-                Viernes 21 de Octubre en la Fiesta de la Flor (Suipacha 842 CABA), 23 hs, $50 anticipadas $70 en puerta</h3>
+      <br>
+      <br>
+      <br>
+      <br>
+
+        <div class="w3-container textocategorias">
+            <a href="https://www.facebook.com/events/191240934614955/" target="_blank" class="quitar"><i class="material-icons">priority_high</i>
+            <h3>Viernes 21 de Octubre en la Fiesta de la Flor (Suipacha 842 CABA), 23 hs, $50 anticipadas $70 en puerta</h3></a>
         </div>
         <br>
 
