--- a/views/secciones/proximos.erb
+++ b/views/secciones/proximos.erb
@@ -15,7 +15,7 @@
 
         <div class="w3-container textocategorias">
             <a href="https://www.facebook.com/events/191240934614955/" target="_blank" class="quitar"><i class="material-icons">priority_high</i>
-            <h3>Viernes 21 de Octubre en la Fiesta de la Flor (Suipacha 842 CABA), 23 hs, $50 anticipadas $70 en puerta</h3></a>
+            Viernes 21 de Octubre en la Fiesta de la Flor (Suipacha 842 CABA), 23 hs, $50 anticipadas $70 en puerta</a>
         </div>
         <br>
 
