--- a/views/secciones/proximos.erb
+++ b/views/secciones/proximos.erb
@@ -14,8 +14,8 @@
       <br>
 
         <div class="w3-container textocategorias">
-            <a href="https://www.facebook.com/events/191240934614955/" target="_blank" class="quitar"><i class="material-icons">priority_high</i>
-            Viernes 21 de Octubre en la Fiesta de la Flor (Suipacha 842 CABA), 23 hs, $50 anticipadas $70 en puerta</a>
+            <a href="https://www.facebook.com/events/191240934614955/" target="_blank" class="quitar">
+            Viernes 21 de Octubre en la Fiesta de la Flor (Suipacha 842 CABA), 23 hs, $50 anticipadas $70 en puerta <i class="material-icons">priority_high</i></a>
         </div>
         <br>
 
