modificación clases pagina shows pasados

--- a/views/secciones/audios.erb
+++ b/views/secciones/audios.erb
@@ -13,7 +13,7 @@
         <br>
         <br>
 
-        <h1>En construcción</h1>
+        <p class="textocategorias">En construcción</p>
 
     </body>
 </html>
