--- a/views/secciones/pasados.erb
+++ b/views/secciones/pasados.erb
@@ -12,7 +12,7 @@
         <br>
 
         <div class="w3-container">
-            <ul class="w3-ul w3-card-4 w3-hoverable">
+            <ul class="w3-hoverable">
                 <li class="w3-padding-16">
                     <span onclick="this.parentElement.style.display='none'" class="w3-closebtn w3-padding w3-margin-right w3-medium">x</span>
                     <a href="salon2" class="quitar">
