modificación clases pagina shows pasados

--- a/views/secciones/pasados.erb
+++ b/views/secciones/pasados.erb
@@ -12,7 +12,7 @@
         <br>
 
         <div class="w3-container">
-            <ul class="w3-hoverable">
+            <ul class="w3-hoverable w3-ul">
                 <li class="w3-padding-16">
                     <span onclick="this.parentElement.style.display='none'" class="w3-closebtn w3-padding w3-margin-right w3-medium">x</span>
                     <a href="salon2" class="quitar">
@@ -25,7 +25,7 @@
                 <li class="w3-padding-16">
                     <span onclick="this.parentElement.style.display='none'" class="w3-closebtn w3-padding w3-margin-right w3-medium">x</span>
                     <a href="pquesaavedra" class="quitar">
-                        <img src="/imagenes/galeria/fechas/pquesaavedra1-10/banda6.jpg" class="w3-left w3-circle w3-margin-right" style="width:60px">
+                        <img src="/imagenes/galeria/fechas/pquesaavedra24-9/banda6.jpg" class="w3-left w3-circle w3-margin-right" style="width:60px">
                         <span class="w3-xlarge">Parque Saavedra | 15 hs | CABA</span><br>
                         <span class="w3-large">24 de Septiembre de 2016</span>
                     </a>
