--- a/views/secciones/pasados.erb
+++ b/views/secciones/pasados.erb
@@ -17,7 +17,7 @@
                     <span onclick="this.parentElement.style.display='none'" class="w3-closebtn w3-padding w3-margin-right w3-medium">x</span>
                     <a href="salon2" class="quitar">
                         <img src="/imagenes/galeria/fechas/salon1-10/banda1.jpg" class="w3-left w3-circle w3-margin-right" style="width:60px">
-                        <span class="w3-xlarge">Salon Pueyrredon | 01 hs | CABA</span><br>
+                        <span class="textodescripcion">Salon Pueyrredon | 01 hs | CABA</span><br>
                         <span class="w3-large">1 de Octubre de 2016</span>
                     </a>
                 </li>
@@ -26,7 +26,7 @@
                     <span onclick="this.parentElement.style.display='none'" class="w3-closebtn w3-padding w3-margin-right w3-medium">x</span>
                     <a href="pquesaavedra" class="quitar">
                         <img src="/imagenes/galeria/fechas/pquesaavedra24-9/banda6.jpg" class="w3-left w3-circle w3-margin-right" style="width:60px">
-                        <span class="w3-xlarge">Parque Saavedra | 15 hs | CABA</span><br>
+                        <span class="textodescripcion">Parque Saavedra | 15 hs | CABA</span><br>
                         <span class="w3-large">24 de Septiembre de 2016</span>
                     </a>
                 </li>
@@ -34,7 +34,7 @@
                     <span onclick="this.parentElement.style.display='none'" class="w3-closebtn w3-padding w3-margin-right w3-medium">x</span>
                     <a href="whitevinyl" class="quitar">
                         <img src="/imagenes/galeria/fechas/whitevinyl24-10/banda2.jpg" class="w3-left w3-circle w3-margin-right" style="width:60px">
-                        <span class="w3-xlarge">White Vinyl | 23 hs | Adrogue</span><br>
+                        <span class="textodescripcion">White Vinyl | 23 hs | Adrogue</span><br>
                         <span class="w3-large">17 de Septiembre de 2016</span>
                     </a>
 
@@ -43,7 +43,7 @@
                     <span onclick="this.parentElement.style.display='none'" class="w3-closebtn w3-padding w3-margin-right w3-medium">x</span>
                     <a href="salon" class="quitar">
                         <img src="/imagenes/galeria/fechas/salon3-9/banda1.jpg" class="w3-left w3-circle w3-margin-right" style="width:60px">
-                        <span class="w3-xlarge">Salon Pueyrredon | 05 hs | CABA</span><br>
+                        <span class="textodescripcion">Salon Pueyrredon | 05 hs | CABA</span><br>
                         <span class="w3-large">2 de Septiembre de 2016</span>
                     </a>
                 </li>
@@ -51,7 +51,7 @@
                     <span onclick="this.parentElement.style.display='none'" class="w3-closebtn w3-padding w3-margin-right w3-medium">x</span>
                     <a href="locabohemia" class="quitar">
                         <img src="/imagenes/galeria/fechas/loca20-8/band4.jpg" class="w3-left w3-circle w3-margin-right" style="width:60px">
-                        <span class="w3-xlarge">Loca Bohemia | 01 hs CABA</span><br>
+                        <span class="textodescripcion">Loca Bohemia | 01 hs CABA</span><br>
                         <span class="w3-large">20 de agosto de 2016</span>
                     </a>
                 </li>
