--- a/views/secciones/pasados.erb
+++ b/views/secciones/pasados.erb
@@ -10,7 +10,6 @@
         <br>
         <br>
         <br>
-
         <div class="w3-container">
             <ul class="w3-hoverable w3-ul">
                 <li class="w3-padding-16">
@@ -18,16 +17,15 @@
                     <a href="salon2" class="quitar">
                         <img src="/imagenes/galeria/fechas/salon1-10/banda1.jpg" class="w3-left w3-circle w3-margin-right" style="width:60px">
                         <span class="textodescripcion">Salon Pueyrredon | 01 hs | CABA</span><br>
-                        <span class="w3-large">1 de Octubre de 2016</span>
+                        <span class="texttercernivel">1 de Octubre de 2016</span>
                     </a>
                 </li>
-
                 <li class="w3-padding-16">
                     <span onclick="this.parentElement.style.display='none'" class="w3-closebtn w3-padding w3-margin-right w3-medium">x</span>
                     <a href="pquesaavedra" class="quitar">
                         <img src="/imagenes/galeria/fechas/pquesaavedra24-9/banda6.jpg" class="w3-left w3-circle w3-margin-right" style="width:60px">
                         <span class="textodescripcion">Parque Saavedra | 15 hs | CABA</span><br>
-                        <span class="w3-large">24 de Septiembre de 2016</span>
+                        <span class="texttercernivel">24 de Septiembre de 2016</span>
                     </a>
                 </li>
                 <li class="w3-padding-16">
@@ -35,16 +33,15 @@
                     <a href="whitevinyl" class="quitar">
                         <img src="/imagenes/galeria/fechas/whitevinyl24-10/banda2.jpg" class="w3-left w3-circle w3-margin-right" style="width:60px">
                         <span class="textodescripcion">White Vinyl | 23 hs | Adrogue</span><br>
-                        <span class="w3-large">17 de Septiembre de 2016</span>
+                        <span class="texttercernivel">17 de Septiembre de 2016</span>
                     </a>
-
                 </li>
                 <li class="w3-padding-16">
                     <span onclick="this.parentElement.style.display='none'" class="w3-closebtn w3-padding w3-margin-right w3-medium">x</span>
                     <a href="salon" class="quitar">
                         <img src="/imagenes/galeria/fechas/salon3-9/banda1.jpg" class="w3-left w3-circle w3-margin-right" style="width:60px">
                         <span class="textodescripcion">Salon Pueyrredon | 05 hs | CABA</span><br>
-                        <span class="w3-large">2 de Septiembre de 2016</span>
+                        <span class="texttercernivel">2 de Septiembre de 2016</span>
                     </a>
                 </li>
                 <li class="w3-padding-16">
@@ -52,10 +49,9 @@
                     <a href="locabohemia" class="quitar">
                         <img src="/imagenes/galeria/fechas/loca20-8/band4.jpg" class="w3-left w3-circle w3-margin-right" style="width:60px">
                         <span class="textodescripcion">Loca Bohemia | 01 hs CABA</span><br>
-                        <span class="w3-large">20 de agosto de 2016</span>
+                        <span class="texttercernivel">20 de agosto de 2016</span>
                     </a>
                 </li>
-
             </ul>
         </div>
     </body>
