modificación pagina de letras, estilo

--- a/views/secciones/letras.erb
+++ b/views/secciones/letras.erb
@@ -11,12 +11,12 @@
         <br>
         <br>
 
-        <div class="w3-card-4" style="width:50%;">
-            <header class="w3-container w3-blue">
-                <h3>Buena Cosecha</h3>
-            </header>
-            <div class="w3-container">
-                <pre>
+        <div class="w3-container">
+          <div class="textocategorias">
+              Buena Cosecha
+          </div>
+
+            <pre>
     Y a pesar que voy probando. Que voy improvisando. Con el corazón para adelante avanzo.
     No me intimida una caída. No es por hacerme el malo, es por que le pongo pila.
     A mi no me interesa, qué futuro se acerca. Por futuros pasados estoy en esta senda.
@@ -42,16 +42,15 @@
     Voy por más….
     Por más……
     Voy por más….
-    La la la la. </pre>
-            </div>
+    La la la la.
+        </pre>
         </div>
         <br>
-        <div class="w3-card-4" style="width:50%;">
-            <header class="w3-container w3-blue">
-                <h3>Cuando</h3>
-            </header>
-            <div class="w3-container">
-                <pre>
+        <div class="w3-container">
+          <div class="textocategorias">
+              Cuando
+          </div>
+            <pre>
     Cuando ya no tengas lugar ni en tu mesa. Cuando tu psiquiatra pierda la cabeza.
     Cuando tus pisadas ya no dejen huellas, y hasta la piedad te regale su ausencia.
     Cuando en tu silencio ya no haya misterio. Cuando la mañana no traiga consuelo.
@@ -71,16 +70,16 @@
     Quiero ver qué vas a hacer?
     Cuando esa nube en tu cielo se convierta en aguacero.
     Quiero ver qué vas a hacer?
-    Cuando te aturda el silencio. Cuando te gane la guerra el invierno…  </pre>
-            </div>
+    Cuando te aturda el silencio. Cuando te gane la guerra el invierno…
+        </pre>
         </div>
         <br>
-        <div class="w3-card-4" style="width:50%;">
-            <header class="w3-container w3-blue">
-                <h3>De la mano</h3>
-            </header>
-            <div class="w3-container">
-                <pre>
+        <div class="textocategorias">
+            De la mano
+        </div>
+
+        <div class="w3-container">
+            <pre>
     La madrugada otra vez me encontró, en el jardín del desorden.
     Cantando siempre la misma canción, tratando de no gritar tu nombre.
     Cierro los ojos y estalla mi voz. Me ahogo con mis palabras.
@@ -101,16 +100,16 @@
     Dulce sueño pequeño y fatal. Ansiolítica calma irreal.
     Y en mi mente, sueño recurrente de salir de acá.
     Y en mi mente, sueño recurrente de salir de acá.
-    Y en mi mente, sueño recurrente de verte llegar...  </pre>
-            </div>
+    Y en mi mente, sueño recurrente de verte llegar...
+        </pre>
         </div>
         <br>
-        <div class="w3-card-4" style="width:50%;">
-            <header class="w3-container w3-blue">
-                <h3>Misteria</h3>
-            </header>
-            <div class="w3-container">
-                <pre>
+        <div class="textocategorias">
+            Misteria
+        </div>
+
+        <div class="w3-container">
+            <pre>
     Fué muy fuerte el golpe, había que tomar una decisión.
     Estaba ciego. Estaba loco. Loco de amor.
     Y aunque me dijiste que no era lo mejor.
@@ -141,17 +140,16 @@
     Y es que día a día yo me aferro a la ilusión.
     De que aparezcas, y me digas, “Acá está tu corazón”.
 
-    Por qué?.....Por qué, me dejaste? </pre>
-            </div>
+    Por qué?.....Por qué, me dejaste?
+        </pre>
         </div>
         <br>
+        <div class="textocategorias">
+            Tierra
+        </div>
 
-        <div class="w3-card-4" style="width:50%;">
-            <header class="w3-container w3-blue">
-                <h3>Tierra</h3>
-            </header>
-            <div class="w3-container">
-                <pre>
+        <div class="w3-container">
+            <pre>
     Tierra, que nos diste lo suficiente. Querida tierra.
     En un pasado te fuimos fieles querida Tierra. Juzganos hoy!
     Son menos plantas en ésta esfera, por un progreso que nunca espera.
@@ -179,17 +177,16 @@
 
     Tierra.
     Tierra.
-    Tierra. </pre>
-            </div>
+    Tierra.
+          </pre>
         </div>
         <br>
+        <div class="textocategorias">
+            Yo sabia
+        </div>
 
-        <div class="w3-card-4" style="width:50%;">
-            <header class="w3-container w3-blue">
-                <h3>Yo sabía</h3>
-            </header>
-            <div class="w3-container">
-                <pre>
+        <div class="w3-container">
+            <pre>
     Hey ! Que línda estabas vos ayer !!!
     Algo cerca y lejos a la vez.
     Tengo dudas de lo que pasa.
@@ -215,9 +212,8 @@
     Es solo nuestro este secreto. Y entre dos se va a quedar.
 
     Hoy dame la oportunidad…
-    De estar con vos un rato más…</pre>
-            </div>
+    De estar con vos un rato más…
+        </pre>
         </div>
-        <br>
     </body>
 </html>
