modificación pagina de letras, estilo

--- a/views/secciones/letras.erb
+++ b/views/secciones/letras.erb
@@ -16,7 +16,7 @@
               Buena Cosecha
           </div>
 
-            <pre>
+            <pre class="texttercernivel">
     Y a pesar que voy probando. Que voy improvisando. Con el corazón para adelante avanzo.
     No me intimida una caída. No es por hacerme el malo, es por que le pongo pila.
     A mi no me interesa, qué futuro se acerca. Por futuros pasados estoy en esta senda.
@@ -50,7 +50,7 @@
           <div class="textocategorias">
               Cuando
           </div>
-            <pre>
+          <pre class="texttercernivel">
     Cuando ya no tengas lugar ni en tu mesa. Cuando tu psiquiatra pierda la cabeza.
     Cuando tus pisadas ya no dejen huellas, y hasta la piedad te regale su ausencia.
     Cuando en tu silencio ya no haya misterio. Cuando la mañana no traiga consuelo.
@@ -79,7 +79,7 @@
         </div>
 
         <div class="w3-container">
-            <pre>
+          <pre class="texttercernivel">
     La madrugada otra vez me encontró, en el jardín del desorden.
     Cantando siempre la misma canción, tratando de no gritar tu nombre.
     Cierro los ojos y estalla mi voz. Me ahogo con mis palabras.
@@ -109,7 +109,7 @@
         </div>
 
         <div class="w3-container">
-            <pre>
+          <pre class="texttercernivel">
     Fué muy fuerte el golpe, había que tomar una decisión.
     Estaba ciego. Estaba loco. Loco de amor.
     Y aunque me dijiste que no era lo mejor.
@@ -149,7 +149,7 @@
         </div>
 
         <div class="w3-container">
-            <pre>
+          <pre class="texttercernivel">
     Tierra, que nos diste lo suficiente. Querida tierra.
     En un pasado te fuimos fieles querida Tierra. Juzganos hoy!
     Son menos plantas en ésta esfera, por un progreso que nunca espera.
@@ -186,7 +186,7 @@
         </div>
 
         <div class="w3-container">
-            <pre>
+          <pre class="texttercernivel">
     Hey ! Que línda estabas vos ayer !!!
     Algo cerca y lejos a la vez.
     Tengo dudas de lo que pasa.
