--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,6 +1,7 @@
 <html>
     <head>
         <meta name="google-site-verification" content="tZ29lnY9K77zk3P76FMVACpqZm1Aeiha3lukoAFjE9M"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="<%= url('/estilos/styles.css') %>" rel="stylesheet" type="text/css"/>
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link href="https://fonts.googleapis.com/css?family=Bangers|Lato|Finger+Paint|Anton|Permanent+Marker|Shrikhand" rel="stylesheet">
