corrigiendo visualización celulares css

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -131,6 +131,7 @@
                 <%= yield %>
             </div>
         </body>
+        <footer>
         <div class="w3-bottom">
             <ul class="footertype w3-navbar w3-card-2 w3-center-align">
                 <li>
