--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,7 +1,7 @@
 <html>
     <head>
         <meta name="google-site-verification" content="tZ29lnY9K77zk3P76FMVACpqZm1Aeiha3lukoAFjE9M"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
         <link href="<%= url('/estilos/styles.css') %>" rel="stylesheet" type="text/css"/>
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link href="https://fonts.googleapis.com/css?family=Bangers|Lato|Finger+Paint|Anton|Permanent+Marker|Shrikhand" rel="stylesheet">
@@ -117,49 +117,40 @@
 
     <body>
         <div id='header'>
-            <!-- <nav>
-        <ul class="w3-navbar w3-card-8 w3-blue w3-large" >
-          <li><a href="/">Volver</a></li>
-          <li><a href="presu">Presupuesto</a></li>
-          <li><a href="contact">Contacto</i></a></li>
-          <li><a href="about">Sobre mi</a></li>
-          </ul>
-      </nav>
 
-    </div> -->
             <div id='main'>
                 <%= yield %>
             </div>
         </body>
         <footer>
-        <div class="w3-bottom">
-            <ul class="footertype w3-navbar w3-card-2 w3-center-align">
-                <li>
-                    <a href="mailto:info@buenacosecha.com.ar?subject=contacto" target="_blank">
-                        <i id="social-em" class="fa fa-envelope-square fa-2x social"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="https://www.instagram.com/buenacosechaska" target="_blank">
-                        <i id="social-in" class="fa fa-instagram fa-2x social"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="https://www.youtube.com/channel/UClUAerSDxrXUJON4TXJIing" target="_blank">
-                        <i id="social-yt" class="fa fa-youtube-play fa-2x social"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="https://www.twitter.com/buenacosechaska" target="_blank">
-                        <i id="social-tw" class="fa fa-twitter-square fa-2x social"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="https://www.facebook.com/buenacosechabanda/" target="_blank">
-                        <i id="social-fb" class="fa fa-facebook-square fa-2x social"></i>
-                    </a>
-                </li>
-            </ul>
-        </div>
-    </footer>
-</html>
+            <div class="w3-bottom">
+                <ul class="footertype w3-navbar w3-card-2 w3-left-align">
+                    <li>
+                        <a href="mailto:info@buenacosecha.com.ar?subject=contacto" target="_blank">
+                            <i id="social-em" class="fa fa-envelope-square fa-2x social"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.instagram.com/buenacosechaska" target="_blank">
+                            <i id="social-in" class="fa fa-instagram fa-2x social"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.youtube.com/channel/UClUAerSDxrXUJON4TXJIing" target="_blank">
+                            <i id="social-yt" class="fa fa-youtube-play fa-2x social"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.twitter.com/buenacosechaska" target="_blank">
+                            <i id="social-tw" class="fa fa-twitter-square fa-2x social"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.facebook.com/buenacosechabanda/" target="_blank">
+                            <i id="social-fb" class="fa fa-facebook-square fa-2x social"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </footer>
+    </html>
