--- a/views/layout.erb
+++ b/views/layout.erb
@@ -124,7 +124,7 @@
         </body>
         <footer>
             <div class="w3-bottom">
-                <ul class="footertype w3-navbar w3-card-2 w3-left-align">
+                <ul class="footertype w3-sidenav w3-card-2 w3-left-align">
                     <li>
                         <a href="mailto:info@buenacosecha.com.ar?subject=contacto" target="_blank">
                             <i id="social-em" class="fa fa-envelope-square fa-2x social"></i>
