--- a/views/secciones/proximos.erb
+++ b/views/secciones/proximos.erb
@@ -13,6 +13,12 @@
       <br>
       <br>
 
+      <div class="w3-container textocategorias">
+          <a href="https://www.facebook.com/events/191240934614955/" target="_blank" class="quitar">
+          Martes 11 de Octubre en Club V (Av. Corrientes 5008 CABA), 23 hs <i class="material-icons">priority_high</i></a>
+      </div>
+
+
         <div class="w3-container textocategorias">
             <a href="https://www.facebook.com/events/191240934614955/" target="_blank" class="quitar">
             Viernes 21 de Octubre en la Fiesta de la Flor (Suipacha 842 CABA), 23 hs, $60 anticipadas $80 en puerta <i class="material-icons">priority_high</i></a>
