agregado de fecha en Club V

--- a/views/secciones/proximos.erb
+++ b/views/secciones/proximos.erb
@@ -14,8 +14,8 @@
       <br>
 
       <div class="w3-container textocategorias">
-          <a href="https://www.facebook.com/events/191240934614955/" target="_blank" class="quitar">
-          Martes 11 de Octubre en Club V (Av. Corrientes 5008 CABA), 23 hs <i class="material-icons">priority_high</i></a>
+          <a href="https://www.facebook.com/Club-V-165907106858236/events/" target="_blank" class="quitar">
+          Martes 11 de Octubre en Club V (Av. Corrientes 5008 CABA), Noche Vinilos!, 23 hs, Entrada Gratis <i class="material-icons">priority_high</i></a>
       </div>
 
 
