modificación pagina de shows pasados

--- a/views/secciones/proximos.erb
+++ b/views/secciones/proximos.erb
@@ -8,20 +8,23 @@
     </head>
 
     <body>
-      <br>
-      <br>
-      <br>
-      <br>
+        <br>
+        <br>
+        <br>
+        <br>
 
-      <div class="w3-container textocategorias">
-          <a href="https://www.facebook.com/Club-V-165907106858236/events/" target="_blank" class="quitar">
-          Martes 11 de Octubre en Club V (Av. Corrientes 5008 CABA), Noche Vinilos!, 23 hs, Entrada Gratis <i class="material-icons">priority_high</i></a>
-      </div>
-
-
+        <div class="w3-container w3-hoverable textocategorias">
+            <a href="https://www.facebook.com/Club-V-165907106858236/events/" target="_blank" class="quitar">
+                Martes 11 de Octubre en Club V (Av. Corrientes 5008 CABA), Noche Vinilos!, 23 hs, Entrada Gratis
+                <i class="material-icons">priority_high</i>
+            </a>
+        </div>
+        <br>
         <div class="w3-container textocategorias">
             <a href="https://www.facebook.com/events/191240934614955/" target="_blank" class="quitar">
-            Viernes 21 de Octubre en la Fiesta de la Flor (Suipacha 842 CABA), 23 hs, $60 anticipadas $80 en puerta <i class="material-icons">priority_high</i></a>
+                Viernes 21 de Octubre en la Fiesta de la Flor (Suipacha 842 CABA), 23 hs, $60 anticipadas $80 en puerta
+                <i class="material-icons">priority_high</i>
+            </a>
         </div>
         <br>
 
