--- a/views/secciones/pasados.erb
+++ b/views/secciones/pasados.erb
@@ -10,40 +10,49 @@
         <br>
         <br>
         <br>
+        <br>
+
         <div class="w3-container w3-hoverable">
             <a href="salon2" class="quitar">
-                <img src="/imagenes/galeria/fechas/salon1-10/banda1.jpg" class="w3-left w3-circle w3-margin-right" style="width:75px">
-                <span class="textodescripcion">Salon Pueyrredon | 01 hs | CABA</span><br>
+                <img src="/imagenes/galeria/fechas/salon1-10/banda1.jpg" class="w3-right w3-circle w3-margin-right" style="width:75px">
+                <span class="textodescripcion">Salon Pueyrredon | 01 hs | CABA</span>
                 <span class="texttercernivel">1 de Octubre de 2016</span>
+                <br>
             </a>
         </div>
+        <br>
         <div class="w3-container w3-hoverable">
             <a href="pquesaavedra" class="quitar">
-                <img src="/imagenes/galeria/fechas/pquesaavedra24-9/banda6.jpg" class="w3-left w3-circle w3-margin-right" style="width:75px">
+                <img src="/imagenes/galeria/fechas/pquesaavedra24-9/banda6.jpg" class="w3-right w3-circle w3-margin-right" style="width:75px">
                 <span class="textodescripcion">Parque Saavedra | 15 hs | CABA</span><br>
                 <span class="texttercernivel">24 de Septiembre de 2016</span>
             </a>
         </div>
+        <br>
         <div class="w3-container w3-hoverable">
             <a href="whitevinyl" class="quitar">
-                <img src="/imagenes/galeria/fechas/whitevinyl24-10/banda2.jpg" class="w3-left w3-circle w3-margin-right" style="width:75px">
+                <img src="/imagenes/galeria/fechas/whitevinyl24-10/banda2.jpg" class="w3-right w3-circle w3-margin-right" style="width:75px">
                 <span class="textodescripcion">White Vinyl | 23 hs | Adrogue</span><br>
                 <span class="texttercernivel">17 de Septiembre de 2016</span>
             </a>
         </div>
+        <br>
         <div class="w3-container w3-hoverable">
             <a href="salon" class="quitar">
-                <img src="/imagenes/galeria/fechas/salon3-9/banda1.jpg" class="w3-left w3-circle w3-margin-right" style="width:75px">
+                <img src="/imagenes/galeria/fechas/salon3-9/banda1.jpg" class="w3-right w3-circle w3-margin-right" style="width:75px">
                 <span class="textodescripcion">Salon Pueyrredon | 05 hs | CABA</span><br>
                 <span class="texttercernivel">2 de Septiembre de 2016</span>
             </a>
         </div>
+        <br>
         <div class="w3-container w3-hoverable">
             <a href="locabohemia" class="quitar">
-                <img src="/imagenes/galeria/fechas/loca20-8/band4.jpg" class="w3-left w3-circle w3-margin-right" style="width:75px">
+                <img src="/imagenes/galeria/fechas/loca20-8/band4.jpg" class="w3-right w3-circle w3-margin-right" style="width:75px">
                 <span class="textodescripcion">Loca Bohemia | 01 hs CABA</span><br>
                 <span class="texttercernivel">20 de agosto de 2016</span>
             </a>
         </div>
+        <br>
+
     </body>
 </html>
