--- a/views/secciones/pasados.erb
+++ b/views/secciones/pasados.erb
@@ -14,9 +14,10 @@
 
         <div class="w3-container w3-hoverable">
             <a href="salon2" class="quitar">
-                <img src="/imagenes/galeria/fechas/salon1-10/banda1.jpg" class="w3-right w3-circle w3-margin-right" style="width:75px">
-                <span class="textodescripcion">Salon Pueyrredon | 01 hs | CABA</span>
+                <span class="textodescripcion">Salon Pueyrredon | 01 hs | CABA|</span>
                 <span class="texttercernivel">1 de Octubre de 2016</span>
+                <img src="/imagenes/galeria/fechas/salon1-10/banda1.jpg" class="w3-circle w3-margin-right" style="width:75px">
+
                 <br>
             </a>
         </div>
@@ -24,7 +25,7 @@
         <div class="w3-container w3-hoverable">
             <a href="pquesaavedra" class="quitar">
                 <img src="/imagenes/galeria/fechas/pquesaavedra24-9/banda6.jpg" class="w3-right w3-circle w3-margin-right" style="width:75px">
-                <span class="textodescripcion">Parque Saavedra | 15 hs | CABA</span><br>
+                <span class="textodescripcion">Parque Saavedra | 15 hs | CABA|</span>
                 <span class="texttercernivel">24 de Septiembre de 2016</span>
             </a>
         </div>
@@ -32,7 +33,7 @@
         <div class="w3-container w3-hoverable">
             <a href="whitevinyl" class="quitar">
                 <img src="/imagenes/galeria/fechas/whitevinyl24-10/banda2.jpg" class="w3-right w3-circle w3-margin-right" style="width:75px">
-                <span class="textodescripcion">White Vinyl | 23 hs | Adrogue</span><br>
+                <span class="textodescripcion">White Vinyl | 23 hs | Adrogue|</span>
                 <span class="texttercernivel">17 de Septiembre de 2016</span>
             </a>
         </div>
@@ -40,7 +41,7 @@
         <div class="w3-container w3-hoverable">
             <a href="salon" class="quitar">
                 <img src="/imagenes/galeria/fechas/salon3-9/banda1.jpg" class="w3-right w3-circle w3-margin-right" style="width:75px">
-                <span class="textodescripcion">Salon Pueyrredon | 05 hs | CABA</span><br>
+                <span class="textodescripcion">Salon Pueyrredon | 05 hs | CABA|</span>
                 <span class="texttercernivel">2 de Septiembre de 2016</span>
             </a>
         </div>
@@ -48,7 +49,7 @@
         <div class="w3-container w3-hoverable">
             <a href="locabohemia" class="quitar">
                 <img src="/imagenes/galeria/fechas/loca20-8/band4.jpg" class="w3-right w3-circle w3-margin-right" style="width:75px">
-                <span class="textodescripcion">Loca Bohemia | 01 hs CABA</span><br>
+                <span class="textodescripcion">Loca Bohemia | 01 hs CABA|</span>
                 <span class="texttercernivel">20 de agosto de 2016</span>
             </a>
         </div>
