agregado de fecha en white vinyl

--- a/views/secciones/proximos.erb
+++ b/views/secciones/proximos.erb
@@ -27,6 +27,13 @@
             </a>
         </div>
         <br>
+        <div class="w3-container textocategorias">
+            <a href="https://www.facebook.com/WhiteVinylBar/" target="_blank" class="quitar">
+                Sabado 26 de Noviembre en White Vinyl (H. Yrigoyen 13233 Adrogue), 23 hs, $50 anticipadas $80 en puerta
+                <i class="material-icons">priority_high</i>
+            </a>
+        </div>
+        <br>
 
     </body>
 </html>
