alineación izquierda nombre banda menu

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -50,7 +50,7 @@
                     <h4 class="menuhomeverde">Nosotros</h4>
                 </a>
             </li>
-            <li class="w3-hide-small w3-center">
+            <li class="w3-hide-small w3-left">
                 <h2 class="textomenucentro w3-animate-fading">
                     <b>Buena Cosecha!</b>
                 </h2>
