agregado de fecha

--- a/views/secciones/proximos.erb
+++ b/views/secciones/proximos.erb
@@ -24,24 +24,26 @@
         <br>
         <div class="w3-container w3-hoverable textocategorias">
             <a href="https://www.facebook.com/Club-V-165907106858236/events/" target="_blank" class="quitar">
-                <span class="textocategorias2">Sabado 15 de Octubre en Zona 42 (Formosa 99 Guernica) 23 hs
+                <span class="textocategorias2">Sabado 15 de Octubre
                 </span>
+                en Zona 42 (Formosa 99 Guernica) 23 hs
                 <i class="material-icons">priority_high</i>
             </a>
         </div>
         <br>
         <div class="w3-container textocategorias">
             <a href="https://www.facebook.com/events/191240934614955/" target="_blank" class="quitar">
-                <span class="textocategorias2">Viernes 21 de Octubre en la Fiesta de la Flor (Suipacha 842 CABA), 23 hs, $60 anticipadas $80 en puerta
+                <span class="textocategorias2">Viernes 21 de Octubre
                 </span>
+                en la Fiesta de la Flor (Suipacha 842 CABA), 23 hs, $60 anticipadas $80 en puerta
                 <i class="material-icons">priority_high</i>
             </a>
         </div>
         <br>
         <div class="w3-container textocategorias">
             <a href="https://www.facebook.com/WhiteVinylBar/" target="_blank" class="quitar">
-                <span class="textocategorias2">Sabado 26 de Noviembre en White Vinyl (H. Yrigoyen 13233 Adrogue), 22 hs, $70 anticipadas $100 en puerta
-                </span>
+                <span class="textocategorias2">Sabado 26 de Noviembre</span>
+                en White Vinyl (H. Yrigoyen 13233 Adrogue), 22 hs, $70 anticipadas $100 en puerta
                 <i class="material-icons">priority_high</i>
             </a>
         </div>
