agregado de pagina de votaciones

--- a/views/secciones/votaciones.erb
+++ b/views/secciones/votaciones.erb
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="<%= url('/estilos/styles.css') %>" rel="stylesheet" type="text/css"/>
         <meta charset="utf-8">
         <title>Votaciones | Buena Cosecha guacho!
         </title>
@@ -8,28 +10,7 @@
     <body>
 
         <div class="" id="cuantostemas">
-            <style>
-                .gray {
-                    display: inline-block;
-                    background: #d9dce0;
-                    background: -webkit-gradient(linear,left top,left bottom,from(#f4f3f3),to(#d9dce0));
-                    background: -moz-linear-gradient(top, #f4f3f3, #d9dce0);
-                    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=  '#f4f3f3', endColorstr='#d9dce0');
-                    border: 1px solid #9C9C9C;
-                    box-shadow: 0 1px #FEFEFE inset;
-                    color: #434343;
-                    text-shadow: 1px 1px 0 #FFFFFF;
-                    -webkit-border-radius: 2px;
-                    -moz-border-radius: 2px;
-                    border-radius: 2px;
-                    margin-top: 3px;
-                    padding: 7px 14px;
-                    cursor: pointer;
-                    font-family: arial;
-                    font-size: 13px;
-                }
-            </style>
-            <a class="gray" onclick="javascript:window.open('https://forms.zohopublic.com/info450/form/Cuantostemasgrabar/formperma/k_27e1Ek41Cjf1CH3eJd36e95');">Access Form</a>
+            <iframe frameborder="0" style="position:absolute;height:100%;width:99%;border:none;" src='https://forms.zohopublic.com/info450/form/Cuantostemasgrabar/formperma/k_27e1Ek41Cjf1CH3eJd36e95'></iframe>
         </div>
     </body>
 </html>
