--- a/views/secciones/pasados.erb
+++ b/views/secciones/pasados.erb
@@ -16,7 +16,7 @@
             <a href="salon2" class="quitar">
                 <span class="textodescripcion">Salon Pueyrredon | 01 hs | CABA|</span>
                 <span class="texttercernivel">1 de Octubre de 2016</span>
-                <img src="/imagenes/galeria/fechas/salon1-10/banda1.jpg" class="w3-circle w3-margin-right" style="width:75px">
+                <img src="/imagenes/flyers/salon2.jpg" class="w3-circle w3-margin-right" style="width:75px">
             </a>
         </div>
         <br>
@@ -24,7 +24,7 @@
             <a href="pquesaavedra" class="quitar">
                 <span class="textodescripcion">Parque Saavedra | 15 hs | CABA|</span>
                 <span class="texttercernivel">24 de Septiembre de 2016</span>
-                <img src="/imagenes/galeria/fechas/pquesaavedra24-9/banda6.jpg" class=" w3-circle w3-margin-right" style="width:75px">
+                <img src="/imagenes/flyers/pquesaavedra.jpg" class=" w3-circle w3-margin-right" style="width:75px">
             </a>
         </div>
         <br>
@@ -32,7 +32,7 @@
             <a href="whitevinyl" class="quitar">
                 <span class="textodescripcion">White Vinyl | 23 hs | Adrogue|</span>
                 <span class="texttercernivel">17 de Septiembre de 2016</span>
-                <img src="/imagenes/galeria/fechas/whitevinyl24-10/banda2.jpg" class=" w3-circle w3-margin-right" style="width:75px">
+                <img src="/imagenes/flyers/whitevinyl.jpg" class=" w3-circle w3-margin-right" style="width:75px">
             </a>
         </div>
         <br>
@@ -40,7 +40,7 @@
             <a href="salon" class="quitar">
                 <span class="textodescripcion">Salon Pueyrredon | 05 hs | CABA|</span>
                 <span class="texttercernivel">2 de Septiembre de 2016</span>
-                <img src="/imagenes/galeria/fechas/salon3-9/banda1.jpg" class=" w3-circle w3-margin-right" style="width:75px">
+                <img src="/imagenes/flyers/salon1.jpg" class=" w3-circle w3-margin-right" style="width:75px">
             </a>
         </div>
         <br>
@@ -48,7 +48,7 @@
             <a href="locabohemia" class="quitar">
                 <span class="textodescripcion">Loca Bohemia | 01 hs CABA|</span>
                 <span class="texttercernivel">20 de agosto de 2016</span>
-                <img src="/imagenes/galeria/fechas/loca20-8/band4.jpg" class=" w3-circle w3-margin-right" style="width:75px">
+                <img src="/imagenes/flyers/locabohemia.jpg" class=" w3-circle w3-margin-right" style="width:75px">
             </a>
         </div>
         <br>
