reemplazando imagenes por flyers

--- a/views/secciones/pasados.erb
+++ b/views/secciones/pasados.erb
@@ -13,6 +13,14 @@
         <br>
 
         <div class="w3-container w3-hoverable">
+            <a href="clubv" class="quitar">
+                <span class="textodescripcion">Club V | 23 hs | CABA|</span>
+                <span class="texttercernivel">11 de Octubre de 2016</span>
+                <img src="/imagenes/flyers/clubv.jpg" class="w3-circle w3-margin-right" style="width:75px">
+            </a>
+        </div>
+        <br>
+        <div class="w3-container w3-hoverable">
             <a href="salon2" class="quitar">
                 <span class="textodescripcion">Salon Pueyrredon | 01 hs | CABA|</span>
                 <span class="texttercernivel">1 de Octubre de 2016</span>
