--- a/public/estilos/styles.css
+++ b/public/estilos/styles.css
@@ -2097,3 +2097,12 @@ input[type=checkbox].w3-check:disabled+.w3-validate, input[type=radio].w3-radio:
     font-family: 'Anton', sans-serif;
     color: #616161;
 }
+
+/* body del slide */
+
+body {
+    font-family: "Lato", sans-serif;
+}
+.mySlides {
+    display: none;
+}
