--- a/views/layout.erb
+++ b/views/layout.erb
@@ -23,7 +23,6 @@
                 <a href="/" class="w3-hover-none w3-hover-text-grey w3-padding-large">
                     <i id="social-ho" class="fa fa-home fa-3x social"></i>
                 </a>
-
             </li>
             <li class="w3-hide-small w3-dropdown-hover submenu">
                 <a href="multimedia" class="w3-hover-none w3-padding-large submenu" title="Musica">
@@ -122,8 +121,8 @@
             </div>
         </div>
     </body>
-    <footer>
-        <div class="w3-bottom">
+    <footer class="w3-bottom">
+        <div class="">
             <ul class="footertype w3-sidenav w3-card-2 w3-left-align">
                 <li>
                     <a href="mailto:info@buenacosecha.com.ar?subject=contacto" target="_blank">
