--- a/views/secciones/pasados.erb
+++ b/views/secciones/pasados.erb
@@ -16,7 +16,7 @@
             <a href="clubv" class="quitar">
                 <span class="textodescripcion">Zona 42 | 23 hs | Guernica|</span>
                 <span class="texttercernivel">15 de Octubre de 2016</span>
-                <img src="/imagenes/flyers/zona42.jpg" class="w3-circle w3-margin-right" style="width:45px">
+                <img src="/imagenes/flyers/zona42.jpg" class="w3-circle w3-margin-right" style="width:30px">
             </a>
         </div>
         <br>
@@ -24,7 +24,7 @@
             <a href="clubv" class="quitar">
                 <span class="textodescripcion">Club V | 23 hs | CABA|</span>
                 <span class="texttercernivel">11 de Octubre de 2016</span>
-                <img src="/imagenes/flyers/zona42.jpg" class="w3-circle w3-margin-right" style="width:45px">
+                <img src="/imagenes/flyers/clubv.jpg" class="w3-circle w3-margin-right" style="width:45px">
             </a>
         </div>
         <br>
