--- a/views/secciones/votaciones.erb
+++ b/views/secciones/votaciones.erb
@@ -9,7 +9,11 @@
     </head>
 
     <body>
-      <br>
+        <br>
+        <div class="" id="ensayosiono">
+            <iframe frameborder="0" style="position:absolute;height:100%;width:99%;border:none;" src='https://forms.zohopublic.com/info450/form/Ensayardespuesdeasado/formperma/C0A5Eb5KB0j4K1d14M8kh6540'></iframe>
+        </div>
+
         <div class="" id="cuantostemas">
             <iframe frameborder="0" style="position:absolute;height:100%;width:99%;border:none;" src='https://forms.zohopublic.com/info450/form/Cuantostemasgrabar/formperma/k_27e1Ek41Cjf1CH3eJd36e95'></iframe>
         </div>
