nuevo formulario con popups en js

--- a/views/secciones/votaciones.erb
+++ b/views/secciones/votaciones.erb
@@ -10,27 +10,12 @@
 
     <body>
         <br>
-        <div class="" id="ensayosiono">
-            <iframe frameborder="0" style="position:absolute;height:100%;width:99%;border:none;" src='https://forms.zohopublic.com/info450/form/Ensayardespuesdeasado/formperma/C0A5Eb5KB0j4K1d14M8kh6540'></iframe>
-        </div>
         <br>
-        <div class="" id="cuantostemas">
-            <iframe frameborder="0" style="position:absolute;height:100%;width:99%;border:none;" src='https://forms.zohopublic.com/info450/form/Cuantostemasgrabar/formperma/k_27e1Ek41Cjf1CH3eJd36e95'></iframe>
-        </div>
 
-        <script type="text/javascript">
-            function zforms_open_window(url, height, width) {
-                var leftPos = 0;
-                var topPos = 0;
-                if (screen) {
-                    leftPos = (screen.width - width) / 2;
-                    topPos = (screen.height - height) / 2;
-                    window.open(url, null, 'width=' + width + ',height=' + height + ',left=' + leftPos + ',top=' + topPos + ', toolbar=0, location=0, status=1, scrollbars=1, resizable=1');
-                }
-            }
-        </script>
-        <a href='https://forms.zohopublic.com/info450/form/Ensayardespuesdeasado/formperma/C0A5Eb5KB0j4K1d14M8kh6540' title="¿Ensayar despues de asado?" target='_blank' onclick="zforms_open_window(this.href, 648, 700); return false">Votación dos</a>
+        <a href='https://forms.zohopublic.com/info450/form/Cuantostemasgrabar/formperma/k_27e1Ek41Cjf1CH3eJd36e95' title="¿Cuantos temas grabar?" target='_blank' onclick="zforms_open_window(this.href, 648, 700); return false">Votación uno | Grabación </a>
 
+        <a href='https://forms.zohopublic.com/info450/form/Ensayardespuesdeasado/formperma/C0A5Eb5KB0j4K1d14M8kh6540' title="¿Ensayar despues de asado?" target='_blank' onclick="zforms_open_window(this.href, 648, 700); return false">Votación dos | Asado</a>
+
+        <script src="/js/encuestaspopups.js"></script>
     </body>
-
 </html>
