nuevo formulario con popups en js

--- a/views/secciones/votaciones.erb
+++ b/views/secciones/votaciones.erb
@@ -11,10 +11,12 @@
     <body>
         <br>
         <br>
+        <br>
+        <br>
 
-        <a href='https://forms.zohopublic.com/info450/form/Cuantostemasgrabar/formperma/k_27e1Ek41Cjf1CH3eJd36e95' title="¿Cuantos temas grabar?" target='_blank' onclick="zforms_open_window(this.href, 648, 700); return false">Votación uno | Grabación </a>
+        <a class="w3-btn" href='https://forms.zohopublic.com/info450/form/Cuantostemasgrabar/formperma/k_27e1Ek41Cjf1CH3eJd36e95' title="¿Cuantos temas grabar?" target='_blank' onclick="zforms_open_window(this.href, 648, 700); return false">Votación uno | Grabación </a>
 
-        <a href='https://forms.zohopublic.com/info450/form/Ensayardespuesdeasado/formperma/C0A5Eb5KB0j4K1d14M8kh6540' title="¿Ensayar despues de asado?" target='_blank' onclick="zforms_open_window(this.href, 648, 700); return false">Votación dos | Asado</a>
+        <a class="w3-btn" href='https://forms.zohopublic.com/info450/form/Ensayardespuesdeasado/formperma/C0A5Eb5KB0j4K1d14M8kh6540' title="¿Ensayar despues de asado?" target='_blank' onclick="zforms_open_window(this.href, 648, 700); return false">Votación dos | Asado</a>
 
         <script src="/js/encuestaspopups.js"></script>
     </body>
