--- a/views/layout.erb
+++ b/views/layout.erb
@@ -10,14 +10,14 @@
         <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
         <link href="/imagenes/favicon.ico" rel="shortcut icon">
         <script src="/js/analytics.js"></script>
-
     </head>
-
     <!-- Navbar -->
     <div class="w3-top">
-        <ul class="w3-navbar w3-black w3-card-2 w3-right-align">
-            <li class="w3-hide-small w3-opennav w3-right">
-                <a class="w3-padding-large" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"></a>
+        <ul class="w3-navbar w3-black w3-card-2 w3-left-align">
+            <li class="w3-hide-medium w3-hide-large w3-opennav w3-right">
+                <a class="w3-padding-large" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu">
+                    <i class="fa fa-bars"></i>
+                </a>
             </li>
             <li>
                 <a href="/" class="w3-hover-none w3-hover-text-grey w3-padding-large">
@@ -34,7 +34,6 @@
                     <a href="letras">Letras</a>
                 </div>
             </li>
-
             <li class="w3-hide-small w3-dropdown-hover submenu">
                 <a href="shows" class="w3-hover-none w3-padding-large" title="Shows">
                     <h4 class="menuhomeamarillo">Shows</h4>
@@ -49,20 +48,6 @@
                     <h4 class="menuhomeverde">Nosotros</h4>
                 </a>
             </li>
-            <li class="w3-hide-small w3-left">
-                <h2 class="textomenucentro w3-animate-fading">
-                    <b>Buena Cosecha!</b>
-                </h2>
-            </li>
-            <!-- <li class="w3-hide-small w3-dropdown-hover">
-                <a href="mas" class="w3-hover-none w3-padding-large" title="Mas">
-                    Mas
-                </a>
-                <div class="w3-dropdown-content w3-white w3-card-4 w3-left-align">
-                    <a href="merchandising">Merchandising</a>
-                    <a href="entradas">Entradas</a>
-                </div>
-            </li> -->
             <li class="w3-hide-small w3-right">
                 <a href="javascript:void(0)">
                     <i id="social-se" class="fa fa-search fa-3x social"></i>
@@ -95,10 +80,9 @@
             </li>
         </ul>
     </div>
-
     <!-- Navbar on small screens -->
     <div id="navDemo" class="w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
-        <ul class="w3-navbar w3-center-align w3-black">
+        <ul class="w3-navbar w3-left-align w3-black">
             <li>
                 <a class="w3-padding-large" href="multimedia">Música</a>
             </li>
@@ -108,12 +92,8 @@
             <li>
                 <a class="w3-padding-large" href="mailto:info@buenacosecha.com.ar?subject=contacto">Contacto</a>
             </li>
-            <!-- <li>
-                <a class="w3-padding-large" href="entradas">Mas</a>
-            </li> -->
         </ul>
     </div>
-
     <body>
         <div id='header'>
             <div id='main'>
@@ -121,35 +101,4 @@
             </div>
         </div>
     </body>
-    <footer class="w3-bottom">
-        <div class="">
-            <ul class="footertype w3-sidenav w3-card-2 w3-left-align">
-                <li>
-                    <a href="mailto:info@buenacosecha.com.ar?subject=contacto" target="_blank">
-                        <i id="social-em" class="fa fa-envelope-square fa-2x social"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="https://www.instagram.com/buenacosechaska" target="_blank">
-                        <i id="social-in" class="fa fa-instagram fa-2x social"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="https://www.youtube.com/channel/UClUAerSDxrXUJON4TXJIing" target="_blank">
-                        <i id="social-yt" class="fa fa-youtube-play fa-2x social"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="https://www.twitter.com/buenacosechaska" target="_blank">
-                        <i id="social-tw" class="fa fa-twitter-square fa-2x social"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="https://www.facebook.com/buenacosechabanda/" target="_blank">
-                        <i id="social-fb" class="fa fa-facebook-square fa-2x social"></i>
-                    </a>
-                </li>
-            </ul>
-        </div>
-    </footer>
 </html>
