--- a/public/estilos/styles.css
+++ b/public/estilos/styles.css
@@ -2034,7 +2034,7 @@ input[type=checkbox].w3-check:disabled+.w3-validate, input[type=radio].w3-radio:
 }
 
 #menushow:hover {
-    color: #9E8D1D;
+    color: #796800;
 }
 
 #menunosotros:hover {
