--- a/views/layout.erb
+++ b/views/layout.erb
@@ -26,7 +26,7 @@
             </li>
             <li class="w3-hide-small w3-dropdown-hover submenu">
                 <a href="multimedia" class="w3-hover-none w3-padding-large submenu" title="Musica">
-                    <h4 id="menumusica" class="menuhomerojo">Música</h4>
+                    <i id="menumusica" class="menuhomerojo">Música</i>
                 </a>
                 <div class="w3-dropdown-content w3-white w3-card-4 w3-left-align">
                     <a href="audios">Audios</a>
