colores hover de menu home

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -36,7 +36,7 @@
             </li>
             <li class="w3-hide-small w3-dropdown-hover submenu">
                 <a href="shows" class="w3-hover-none w3-padding-large" title="Shows">
-                    <h4 id="menushows" class="menuhomeamarillo">Shows</h4>
+                    <h4 id="menushow" class="menuhomeamarillo">Shows</h4>
                 </a>
                 <div class="w3-dropdown-content w3-white w3-card-2 w3-left-align ">
                     <a href="proximos">Próximos</a>
