--- a/views/layout.erb
+++ b/views/layout.erb
@@ -73,8 +73,8 @@
                     <i id="social-fb" class="fa fa-facebook-square fa-3x social"></i>
                 </a>
             </li>
-            <li>
-                <a href="/" class="w3-hover-none w3-hover-text-grey w3-padding-large">
+            <li class="w3-hide-small w3-right">
+                <a href="/">
                     <i id="social-ho" class="fa fa-home fa-3x social"></i>
                 </a>
             </li>
