reformulando el menu para que se vea bien en mobile

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -14,12 +14,7 @@
     <!-- Navbar -->
     <div class="w3-top">
         <ul class="w3-navbar w3-black w3-card-2 w3-left-align">
-            <li class="w3-hide-medium w3-hide-large w3-opennav w3-right">
-                <a class="w3-padding-large" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu">
-                    <i class="fa fa-bars"></i>
-                </a>
-            </li>
-            <li class="w3-hide-small w3-dropdown-hover submenu">
+            <li class="w3-hide-small w3-hide-medium w3-dropdown-hover submenu">
                 <a href="multimedia" class="w3-hover-none w3-padding-large submenu" title="Musica">
                     <h4 id="menumusica" class="menuhomerojo">Música</h4>
                 </a>
@@ -29,7 +24,7 @@
                     <a href="letras">Letras</a>
                 </div>
             </li>
-            <li class="w3-hide-small w3-dropdown-hover submenu">
+            <li class="w3-hide-small w3-hide-medium w3-dropdown-hover submenu">
                 <a href="shows" class="w3-hover-none w3-padding-large" title="Shows">
                     <h4 id="menushow" class="menuhomeamarillo">Shows</h4>
                 </a>
@@ -38,42 +33,42 @@
                     <a href="pasados">Pasados</a>
                 </div>
             </li>
-            <li class="w3-hide-small">
+            <li class="w3-hide-small w3-hide-medium">
                 <a href="nosotros" class="w3-padding-large" title="Nosotros">
                     <h4 id="menunosotros" class="menuhomeverde">Nosotros</h4>
                 </a>
             </li>
-            <li class="w3-hide-small w3-right">
+            <li class="w3-hide-small w3-hide-medium w3-right">
                 <a href="javascript:void(0)">
                     <i id="social-se" class="fa fa-search fa-3x social"></i>
                 </a>
             </li>
-            <li class="w3-hide-small w3-right">
+            <li class="w3-hide-small w3-hide-medium w3-right">
                 <a href="mailto:info@buenacosecha.com.ar?subject=contacto" target="_blank">
                     <i id="social-em" class="fa fa-envelope-square fa-3x social"></i>
                 </a>
             </li>
-            <li class="w3-hide-small w3-right">
+            <li class="w3-hide-small w3-hide-medium w3-right">
                 <a href="https://www.instagram.com/buenacosechaska" target="_blank">
                     <i id="social-in" class="fa fa-instagram fa-3x social"></i>
                 </a>
             </li>
-            <li class="w3-hide-small w3-right">
+            <li class="w3-hide-small w3-hide-medium w3-right">
                 <a href="https://www.youtube.com/channel/UClUAerSDxrXUJON4TXJIing" target="_blank">
                     <i id="social-yt" class="fa fa-youtube-play fa-3x social"></i>
                 </a>
             </li>
-            <li class="w3-hide-small w3-right">
+            <li class="w3-hide-small w3-hide-medium w3-right">
                 <a href="https://www.twitter.com/buenacosechaska" target="_blank">
                     <i id="social-tw" class="fa fa-twitter-square fa-3x social"></i>
                 </a>
             </li>
-            <li class="w3-hide-small w3-right">
+            <li class="w3-hide-small w3-hide-medium w3-right">
                 <a href="https://www.facebook.com/buenacosechabanda/" target="_blank">
                     <i id="social-fb" class="fa fa-facebook-square fa-3x social"></i>
                 </a>
             </li>
-            <li class="w3-hide-small w3-right">
+            <li class="w3-hide-small w3-hide-medium w3-right">
                 <a href="/">
                     <i id="social-ho" class="fa fa-home fa-3x social"></i>
                 </a>
@@ -81,8 +76,13 @@
         </ul>
     </div>
     <!-- Navbar on small screens -->
-    <div id="navDemo" class="w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
+    <div id="navDemo" class="w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
         <ul class="w3-navbar w3-left-align w3-black">
+            <li class="w3-opennav">
+                <a class="w3-padding-large" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu">
+                    <i class="fa fa-bars"></i>
+                </a>
+            </li>
             <li>
                 <a class="w3-padding-large" href="/">Home</a>
             </li>
