reformulando el menu para que se vea bien en mobile

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -14,6 +14,11 @@
     <!-- Navbar -->
     <div class="w3-top">
         <ul class="w3-navbar w3-black w3-card-2 w3-left-align">
+            <li class="w3-hide-medium w3-hide-large w3-opennav w3-right">
+                <a class="w3-padding-large" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu">
+                    <i class="fa fa-bars"></i>
+                </a>
+            </li>
             <li class="w3-hide-small w3-hide-medium w3-dropdown-hover submenu">
                 <a href="multimedia" class="w3-hover-none w3-padding-large submenu" title="Musica">
                     <h4 id="menumusica" class="menuhomerojo">Música</h4>
@@ -78,11 +83,6 @@
     <!-- Navbar on small screens -->
     <div id="navDemo" class="w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
         <ul class="w3-navbar w3-left-align w3-black">
-            <li class="w3-opennav">
-                <a class="w3-padding-large" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu">
-                    <i class="fa fa-bars"></i>
-                </a>
-            </li>
             <li>
                 <a class="w3-padding-large" href="/">Home</a>
             </li>
