nuevas clases de estilo para menus mobile

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -14,7 +14,7 @@
     <!-- Navbar -->
     <div class="w3-top">
         <ul class="w3-navbar w3-black w3-card-2 w3-left-align">
-            <li class="w3-hide-large w3-opennav w3-right">
+            <li class="w3-hide-large w3-opennav w3-left">
                 <a class="w3-padding-large" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu">
                     <i class="fa fa-bars"></i>
                 </a>
@@ -84,13 +84,17 @@
     <div id="navDemo" class="w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
         <ul class="w3-navbar w3-left-align w3-black">
             <li>
-                <a class="w3-padding-large" href="/">Home</a>
+                <a class="w3-padding-large textomenumobilemusica" href="/">Home
+                  <i id="textomenumobilemusica"></i>
+                </a>
             </li>
             <li>
-                <a class="w3-padding-large" href="multimedia">Música</a>
+                <a class="w3-padding-large textomenumobileshows" href="multimedia">Música</a>
+                <i id="textomenumobileshows"></i>
             </li>
             <li>
-                <a class="w3-padding-large" href="shows">Fechas</a>
+                <a class="w3-padding-large textomenumobilenosotros" href="shows">Fechas</a>
+                <i id="textomenumobilenosotros"></i>
             </li>
         </ul>
     </div>
