corrigiendo bugs de menues

--- a/views/secciones/multimedia.erb
+++ b/views/secciones/multimedia.erb
@@ -29,5 +29,10 @@
                 <i class="material-icons">note</i>Letras</a>
         </div>
         <br>
+
+        <script src="/js/menu.js"></script>
+        <script src="/js/clicks.js"></script>
+        <script src="/js/jquery.js"></script>
+
     </body>
 </html>
